--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <div>
             <input type="text" id="value">
             <button id="button">Create</button>
-            <div id="output">
-                
+            <div>
+                <p  id="output"></p>
+				<button id="copyToClipboard">Copy Text</button>
             </div>
         </div>
 		<script src="/script.js"></script>
