--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 	</head>
 	<body>
 
-        <div>
+        <div id="url">
             <input type="text" id="value">
-            <div>
+            <div id="output-value">
+                <p  id="output"></p>
+				<button id="copyToClipboard">Copy Text</button>
+            </div>
+        </div>
+		<div id="upper">
+            <input type="text" id="value">
+            <div id="output-value">
                 <p  id="output"></p>
 				<button id="copyToClipboard">Copy Text</button>
             </div>
