--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
 	<head>
-		<title>codedamn HTML Playground</title>
+		<title>Text Convertor</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="/style.css" />
@@ -9,14 +9,14 @@
 	<body>
 
         <div id="url">
-            <input type="text" id="value">
+            <input type="text" id="value" placeholder="URL Convertor">
             <div id="output-value">
                 <p  id="output"></p>
 				<button id="copyToClipboard">Copy Text</button>
             </div>
         </div>
 		<div id="upper">
-            <input type="text" id="value">
+            <input type="text" id="value" placeholder="UpperCase convertor">
             <div id="output-value">
                 <p  id="output"></p>
 				<button id="copyToClipboard">Copy Text</button>
