--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Text Convertor</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, init
-		ial-scale=1.0">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-		<link rel="stylesheet" href="/style.css" />
-	</head>
-	<body>
-
-        <div id="url">
-            <input type="text" id="value" placeholder="URL Convertor">
-            <div id="output-value">
-                <p  id="output"></p>
-				<button id="copyToClipboard"><span class="material-symbols-outlined">
-					content_copy
-					</span></button>
-            </div>
-        </div>
-		<div id="upper">
-            <input type="text" id="value" placeholder="UpperCase convertor">
-            <div id="output-value">
-                <p  id="output"></p>
-				<button id="copyToClipboard"><span class="material-symbols-outlined">
-					content_copy
-					</span></button>
-            </div>
-        </div>
-		<script src="/script.js"></script>
-	</body>
+  <head>
+    <title>Text Convertor</title>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+		ial-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <div id="url">
+      <input type="text" id="value" placeholder="URL Convertor" />
+      <div id="output-value">
+        <p id="output"></p>
+        <button id="copyToClipboard">
+          <span class="material-symbols-outlined"> content_copy </span>
+        </button>
+      </div>
+    </div>
+    <div id="upper">
+      <input type="text" id="value" placeholder="UpperCase convertor" />
+      <div id="output-value">
+        <p id="output"></p>
+        <button id="copyToClipboard">
+          <span class="material-symbols-outlined"> content_copy </span>
+        </button>
+      </div>
+    </div>
+    <script src="/script.js"></script>
+  </body>
 </html>
